# cuda_clustering

./: .gitignore  CMakeLists.txt  README.md  main.cu  notes.md
cuda/: CMakeLists.txt  ClusterCloud.cu  CudaClustering.cu  DeviceArray.cu  DeviceMatrix.cu  Matrix.cu  cuda_clustering.cu  cuda_clustering.cuh  dummy.cpp  matrix_clustering.cu
cuda/include/: ClusterCloud.cuh  CudaClustering.cuh  CudaPointCloud.cuh  CudaUtils.cuh  DeviceArray.cuh  DeviceMatrix.cuh  Matrix.cuh  MatrixClustering.cuh  RegionSearch.cuh
cuda/kernels/: MatrixClusteringKernels.cu  RegionSearch.cu  cuda_debug_utills.cu  matrix_clustering.cu
src/: main.cpp
test_data/: test_pc.pcd
test_data/real_world/: output_pc0.pcd  output_pc1.pcd  output_pc2.pcd  output_pc3.pcd  output_pc4.pcd  output_pc5.pcd  output_pc6.pcd  output_pc7.pcd  output_pc8.pcd  output_pc9.pcd
test_data/slalom_debug/: output_pc_0.pcd  output_pc_1.pcd  output_pc_2.pcd  output_pc_3.pcd  output_pc_4.pcd  output_pc_5.pcd  output_pc_6.pcd  output_pc_7.pcd  output_pc_8.pcd  output_pc_9.pcd
tests/: CMakeLists.txt  test_interface.cu  test_interface.cuh  test_main.cpp
tests/kernels/: BuildMatrix.cu
